Modified to support use as a Codec, and removed the need for XML Base64